# removeqtorrent-rs

./: Cargo.toml  install.sh
config/: settings.toml  settings_test.toml
src/: config.rs  downloads.rs  lib.rs  main.rs  mongo.rs  mongodb.rs  qtorrent.rs  torrents.rs
tests/: mongo.rs  mongodb.rs  qtorrent.rs
