[package]
name = "removeqtorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.6", features = ["derive"]}
config = "0.13.3"
mongodb = {version = "2.7.0", default-features = false, features = ["sync"]}
once_cell = "1.18.0"
regex = "1.9.6"
reqwest = {version = "0.11.22", features = ["blocking", "json", "multipart"]}
serde = "1.0.188"
serde_json = "1.0.107"
testcontainers = "0.15.0"
time = "0.3.29"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
tree_magic_mini = { version = "3.0.3", features = ["tree_magic_db", "with-gpl-data"]}
