[package]
name = "removeqtorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
clap = {version = "4.4.6", features = ["derive"]}
config = "0.13.3"
eyre = "0.6.8"
futures = "0.3.29"
infer = "0.15.0"
mongodb = "2.7.0"
regex = "1.9.6"
reqwest = {version = "0.11.22", features = ["json", "multipart"]}
serde = "1.0.188"
serde_json = "1.0.107"
stable-eyre = "0.2.2"
testcontainers = "0.15.0"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
